--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.4",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^3.1.1",
     "sass": "^1.69.5",
@@ -46,5 +48,16 @@
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,js,tsx,jsx,html,css,scss}": [
+      "prettier --write",
+      "yarn lint"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
