--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.12",
     "react-router-dom": "^6.21.0",
     "zustand": "^4.4.7"
   },
