--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
     "react-router-dom": "^6.21.0",
+    "react-spinners": "^0.13.8",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
