--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "webpack serve --open",
     "build": "webpack --config webpack.config.js --mode production",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "axios": "^1.6.2",
@@ -56,7 +57,7 @@
   },
   "lint-staged": {
     "src/**/*.{ts,js,tsx,jsx,html}": [
-      "prettier --write",
+      "yarn format",
       "yarn lint"
     ]
   }
