--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "dev": "webpack serve --open",
     "build": "webpack --config webpack.config.js --mode production",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "format": "prettier --write ."
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "axios": "^1.6.2",
@@ -57,8 +56,8 @@
   },
   "lint-staged": {
     "src/**/*.{ts,js,tsx,jsx,html}": [
-      "yarn format",
-      "yarn lint"
+      "yarn lint",
+      "yarn prettier --write"
     ]
   }
 }
