--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "dev": "webpack serve --open",
     "build": "webpack --config webpack.config.js --mode production",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "stylelint": "stylelint '**/*.scss'",
+    "stylelint:fix": "stylelint '**/*.scss' --fix"
   },
   "dependencies": {
     "axios": "^1.6.2",
@@ -48,6 +51,10 @@
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "stylelint": "^16.1.0",
+    "stylelint-config-standard-scss": "^13.0.0",
+    "stylelint-prettier": "^5.0.0",
+    "stylelint-scss": "^6.0.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
@@ -55,9 +62,14 @@
     "webpack-dev-server": "^4.15.1"
   },
   "lint-staged": {
-    "src/**/*.{ts,js,tsx,jsx,css,scss,html}": [
+    "src/**/*.{ts,js,tsx,jsx}": [
+      "yarn format",
       "yarn lint",
-      "yarn prettier --write ."
+      "yarn stylelint"
+    ],
+    "src/**/*.{css,scss}": [
+      "yarn format",
+      "yarn stylelint"
     ]
   }
 }
